Fixed alignemnt issue

--- a/assets/style.css
+++ b/assets/style.css
@@ -24,6 +24,7 @@
       top :0;
       position: -webkit-sticky;
       position: sticky;
+      z-index: 10000;
     }
   
   header h1 {
@@ -82,6 +83,8 @@ footer {
   clear: both;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   text-align: center;
+  flex: 0;
+
 }
 footer div{    
   line-height: 1.5;;
@@ -102,9 +105,10 @@ footer h2 {
   background-size: cover;
   background-position: center;
   display: flex;
-  justify-content: flex-end;
+  justify-content:flex-end;
   flex-wrap: wrap;
   position: relative;
+  align-items: center;
   width: 100%;
 
 }
@@ -126,68 +130,76 @@ footer h2 {
   color: var(--primary-color);
   margin-top: 150px;
   background-color:rgb(229, 232, 238);
-  text-align :right;
-  margin-left:20px;
+  margin-right:20px;
+
 }
 
 
 
-/*About myself  section style*/
+/* About myself  section style */
 .about{
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: wrap; 
     justify-content: space-between;
     margin: 20px 50px;  
     width: 90%;
     align-items: center;
-  }
-  
-.flex-row {
-    display: flex;
-    justify-content: left;
-  }
-  
+
+}
+
+/*  STYLING FOR EACH SECTION */  
+
 .section-title {
     font-size: 35px;
     font-family:cursive;
     color: #024e76;
     margin: 0 0 0 80px;
     width: 50%;
+    
+    
   }
   
-.step-info{
-    flex :2 20%;
+.section-info {
+     flex :2 20%;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
+    justify-content: flex-start;
+    width: 90%;
+    /*border-left:5px #39a6b2 solid;*/
+
   }
-  
-.vl-border1 {
-    border-right: 3px solid #39a6b2;
+
+  .section-heading-align {
+    display: flex;
+    justify-content: flex-end; 
+    width: 30%;
+  }
+
+.section-vertical-border{
+    border-left: 3px solid #39a6b2;
     height: 150px;
     flex: 2 1%;
   }
   
-.step-text {
+.section-text {
     flex: 25;
   }
   
-.step-text p {
+.section-text p {
     color: var(--primary-color);
     font-size: 15px;
     text-align: left;
     line-height: 1.3;
-    margin-left: 30px;
+    margin-left: 20px;
     width: 100%;
   }
   
-.vl-border2{
-    border-right: 3px solid #39a6b2;
-    height: 450px;
+.section-vertical-border2{
+    border-left: 3px solid #39a6b2;
+    height: 550px;
     flex: 2 5%;  
-    
   }
-
 .container{
     flex:80;
   }
@@ -201,26 +213,25 @@ footer h2 {
       
   }
   
-.gallery{
+.project-container{
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(5, 10vw);
-    grid-gap: 15px;
+    grid-gap: 25px;
     margin-left: 30px;     
     
   }
   
-.gallery__item{
+.project-item{
   position: relative;
 }
-.gallery__img {
+.project-img {
   width: 100%;
   height: 100%;
   object-fit: cover;
   border: solid 1px var(--primary-color);  
  }
-
-figcaption{
+ figcaption{
   position: absolute;
   margin-left: 5px;
   margin-top: -20%;
@@ -231,8 +242,7 @@ figcaption{
   border: solid 1px var(--primary-color);
   background-color: rgb(229, 232, 238);
 }
-  
-.gallery__item--1 {
+.project-work-1 {
   grid-column-start: 1;
   grid-column-end: 3;
   grid-row-start: 2;
@@ -241,28 +251,28 @@ figcaption{
   
   }
   
-.gallery__item--2 {
+.project-work-2 {
     grid-column-start: 3;
     grid-column-end: 4;
     grid-row-start: 2;
     grid-row-end: 3;
     }
   
-.gallery__item--3 {
+.project-work-3 {
   grid-column-start: 1;
   grid-column-end: 2;
   grid-row-start: 4;
   grid-row-end: 5;
   }
   
-.gallery__item--4 {
+.project-work-4 {
   grid-column-start: 3;
   grid-column-end: 4;
   grid-row-start: 3;
   grid-row-end: 4;
   }
   
-.gallery__item--5 {
+.project-work-5 {
   grid-column-start: 2;
   grid-column-end: 3;
   grid-row-start: 4;
@@ -271,14 +281,10 @@ figcaption{
 
 
 /* CONTACT SECTION*/
-.vl-border3 {
-  border-right: 3px solid #39a6b2;
-  height: 100px;
-  flex: 2 5%;
- 
-}
+
 .contact-info {
-  flex: 150;
+ flex: 150;
+
 }
 .contact-info ul {
   display: flex;
@@ -286,7 +292,7 @@ figcaption{
   justify-content: space-between;
   align-items: left;
   list-style: none;
-  margin-left: 15px;
+  /* margin-left: 20px; */
   width: 100%;  
   }
 
